[package]
name = "socketio_example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
rsa = "0.9.6"
rand = "0.8.5"
rust_socketio = "*"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = "*"
openssl = { version = "0.10", features = ["vendored"] }
whoami = "1.4"

[package.metadata.cross.target.x86_64-unknown-linux-musl]
pre-build = [
    "apt-get update",
    "apt-get install -y musl-tools musl-dev"
]


[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28.0", features = ["user"] }

